Java 17 New CsvException Code cleanup